fix: enhance weather container header style for better visibility

--- a/app/Dashboard/static/css/dashboard.css
+++ b/app/Dashboard/static/css/dashboard.css
@@ -121,6 +121,11 @@
   backdrop-filter: blur(10px);
   transition: background 0.5s ease;
   font-size: 12px;
+  font-weight: 550;
+}
+
+.weather-container h1{
+  font-size: 18px;
   font-weight: 600;
 }
 
